// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Typography/Skeleton custom styles 1`] = `
.emotion-2 {
  width: 70px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
}

.emotion-0 {
  padding: 0.188125rem 0;
  height: 0.875rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-0:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.875rem;
  max-width: 100%;
  display: block;
  border-radius: 0.875rem;
  background-color: #fd8095;
  opacity: 1;
}

<div
  className="emotion-2 emotion-3"
  height={140}
  width={70}
>
  <div
    className="emotion-0 emotion-1"
    width={70}
  />
</div>
`;

exports[`Storyshots Components|Typography/Skeleton default 1`] = `
.emotion-12 {
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
}

.emotion-4 {
  padding: 0.188125rem 0;
  height: 0.875rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-4:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.875rem;
  max-width: 100%;
  display: block;
  border-radius: 0.875rem;
}

.emotion-10 {
  padding: 0.188125rem 0;
  height: 0.875rem;
  max-width: 85%;
  box-sizing: content-box;
}

.emotion-10:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.875rem;
  max-width: 100%;
  display: block;
  border-radius: 0.875rem;
}

.emotion-2 {
  width: 140px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
}

.emotion-0 {
  padding: 0.375rem 0;
  height: 1.25rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-0:before {
  content: ' ';
  background: rgba(0,0,0,0.25);
  height: 1.25rem;
  max-width: 100%;
  display: block;
  border-radius: 1.25rem;
}

<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="emotion-2 emotion-3"
    width={140}
  >
    <div
      className="emotion-0 emotion-1"
      width={140}
    />
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <div
      className="emotion-4 emotion-1"
    />
    <div
      className="emotion-4 emotion-1"
    />
    <div
      className="emotion-4 emotion-1"
    />
    <div
      className="emotion-10 emotion-1"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Typography/Skeleton odd lines with custom width 1`] = `
.emotion-0 {
  padding: 0.188125rem 0;
  height: 0.875rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-0:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.875rem;
  max-width: 100%;
  display: block;
  border-radius: 0.875rem;
}

.emotion-12 {
  padding: 0.188125rem 0;
  height: 0.875rem;
  max-width: 85%;
  box-sizing: content-box;
}

.emotion-12:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.875rem;
  max-width: 100%;
  display: block;
  border-radius: 0.875rem;
}

.emotion-14 {
  width: 350px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
}

<div
  className="emotion-14 emotion-15"
  width={350}
>
  <div
    className="emotion-0 emotion-1"
    width={350}
  />
  <div
    className="emotion-0 emotion-1"
    width={350}
  />
  <div
    className="emotion-0 emotion-1"
    width={350}
  />
  <div
    className="emotion-0 emotion-1"
    width={350}
  />
  <div
    className="emotion-0 emotion-1"
    width={350}
  />
  <div
    className="emotion-0 emotion-1"
    width={350}
  />
  <div
    className="emotion-12 emotion-1"
    width={350}
  />
</div>
`;

exports[`Storyshots Components|Typography/Skeleton variants 1`] = `
.emotion-60 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.33;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-58 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.17;
  -webkit-letter-spacing: 0.00735em;
  -moz-letter-spacing: 0.00735em;
  -ms-letter-spacing: 0.00735em;
  letter-spacing: 0.00735em;
  margin-bottom: 0.35em;
}

.emotion-62 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  margin-bottom: 0.35em;
}

.emotion-16 {
  padding: 0.24750000000000005rem 0;
  height: 1.5rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-16:before {
  content: ' ';
  background: rgba(0,0,0,0.25);
  height: 1.5rem;
  max-width: 100%;
  display: block;
  border-radius: 1.5rem;
}

.emotion-36 {
  padding: 0.188125rem 0;
  height: 0.875rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-36:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.875rem;
  max-width: 100%;
  display: block;
  border-radius: 0.875rem;
}

.emotion-20 {
  padding: 0.375rem 0;
  height: 1.25rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-20:before {
  content: ' ';
  background: rgba(0,0,0,0.25);
  height: 1.25rem;
  max-width: 100%;
  display: block;
  border-radius: 1.25rem;
}

.emotion-2 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 6rem;
  line-height: 1;
  -webkit-letter-spacing: -0.01562em;
  -moz-letter-spacing: -0.01562em;
  -ms-letter-spacing: -0.01562em;
  letter-spacing: -0.01562em;
  margin-bottom: 0.35em;
}

.emotion-0 {
  padding: 0rem 0;
  height: 6rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-0:before {
  content: ' ';
  background: rgba(0,0,0,0.25);
  height: 6rem;
  max-width: 100%;
  display: block;
  border-radius: 6rem;
}

.emotion-6 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 3.75rem;
  line-height: 1;
  -webkit-letter-spacing: -0.00833em;
  -moz-letter-spacing: -0.00833em;
  -ms-letter-spacing: -0.00833em;
  letter-spacing: -0.00833em;
  margin-bottom: 0.35em;
}

.emotion-4 {
  padding: 0rem 0;
  height: 3.75rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-4:before {
  content: ' ';
  background: rgba(0,0,0,0.25);
  height: 3.75rem;
  max-width: 100%;
  display: block;
  border-radius: 3.75rem;
}

.emotion-10 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.04;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-8 {
  padding: 0.06000000000000005rem 0;
  height: 3rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-8:before {
  content: ' ';
  background: rgba(0,0,0,0.25);
  height: 3rem;
  max-width: 100%;
  display: block;
  border-radius: 3rem;
}

.emotion-14 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.17;
  -webkit-letter-spacing: 0.00735em;
  -moz-letter-spacing: 0.00735em;
  -ms-letter-spacing: 0.00735em;
  letter-spacing: 0.00735em;
  margin-bottom: 0.35em;
}

.emotion-12 {
  padding: 0.18062500000000004rem 0;
  height: 2.125rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-12:before {
  content: ' ';
  background: rgba(0,0,0,0.25);
  height: 2.125rem;
  max-width: 100%;
  display: block;
  border-radius: 2.125rem;
}

.emotion-18 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.33;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-22 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  margin-bottom: 0.35em;
}

.emotion-26 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  margin-bottom: 0.35em;
}

.emotion-24 {
  padding: 0.375rem 0;
  height: 1rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-24:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 1rem;
  max-width: 100%;
  display: block;
  border-radius: 1rem;
}

.emotion-30 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.57;
  -webkit-letter-spacing: 0.00714em;
  -moz-letter-spacing: 0.00714em;
  -ms-letter-spacing: 0.00714em;
  letter-spacing: 0.00714em;
  margin-bottom: 0.35em;
}

.emotion-28 {
  padding: 0.249375rem 0;
  height: 0.875rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-28:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.875rem;
  max-width: 100%;
  display: block;
  border-radius: 0.875rem;
}

.emotion-34 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  margin-bottom: 0.35em;
}

.emotion-32 {
  padding: 0.25rem 0;
  height: 1rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-32:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 1rem;
  max-width: 100%;
  display: block;
  border-radius: 1rem;
}

.emotion-38 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  margin-bottom: 0.35em;
}

.emotion-42 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  margin-bottom: 0.35em;
}

.emotion-40 {
  padding: 0.328125rem 0;
  height: 0.875rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-40:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.875rem;
  max-width: 100%;
  display: block;
  border-radius: 0.875rem;
}

.emotion-46 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.66;
  -webkit-letter-spacing: 0.03333em;
  -moz-letter-spacing: 0.03333em;
  -ms-letter-spacing: 0.03333em;
  letter-spacing: 0.03333em;
  margin-bottom: 0.35em;
}

.emotion-44 {
  padding: 0.24749999999999994rem 0;
  height: 0.75rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-44:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.75rem;
  max-width: 100%;
  display: block;
  border-radius: 0.75rem;
}

.emotion-50 {
  width: 200px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 2.66;
  -webkit-letter-spacing: 0.08333em;
  -moz-letter-spacing: 0.08333em;
  -ms-letter-spacing: 0.08333em;
  letter-spacing: 0.08333em;
  text-transform: uppercase;
  margin-bottom: 0.35em;
}

.emotion-48 {
  padding: 0.6225rem 0;
  height: 0.75rem;
  max-width: 100%;
  box-sizing: content-box;
}

.emotion-48:before {
  content: ' ';
  background: rgba(0,0,0,0.15);
  height: 0.75rem;
  max-width: 100%;
  display: block;
  border-radius: 0.75rem;
}

.emotion-52 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 6rem;
  line-height: 1;
  -webkit-letter-spacing: -0.01562em;
  -moz-letter-spacing: -0.01562em;
  -ms-letter-spacing: -0.01562em;
  letter-spacing: -0.01562em;
  margin-bottom: 0.35em;
}

.emotion-54 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 3.75rem;
  line-height: 1;
  -webkit-letter-spacing: -0.00833em;
  -moz-letter-spacing: -0.00833em;
  -ms-letter-spacing: -0.00833em;
  letter-spacing: -0.00833em;
  margin-bottom: 0.35em;
}

.emotion-56 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.04;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-64 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  margin-bottom: 0.35em;
}

.emotion-66 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.57;
  -webkit-letter-spacing: 0.00714em;
  -moz-letter-spacing: 0.00714em;
  -ms-letter-spacing: 0.00714em;
  letter-spacing: 0.00714em;
  margin-bottom: 0.35em;
}

.emotion-68 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  margin-bottom: 0.35em;
}

.emotion-70 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  margin-bottom: 0.35em;
}

.emotion-72 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  margin-bottom: 0.35em;
  display: block;
}

.emotion-74 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.66;
  -webkit-letter-spacing: 0.03333em;
  -moz-letter-spacing: 0.03333em;
  -ms-letter-spacing: 0.03333em;
  letter-spacing: 0.03333em;
  margin-bottom: 0.35em;
  display: block;
}

.emotion-76 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 2.66;
  -webkit-letter-spacing: 0.08333em;
  -moz-letter-spacing: 0.08333em;
  -ms-letter-spacing: 0.08333em;
  letter-spacing: 0.08333em;
  text-transform: uppercase;
  margin-bottom: 0.35em;
  display: block;
}

<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    <div
      className="emotion-2 emotion-3"
      width={200}
    >
      <div
        className="emotion-0 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-6 emotion-3"
      width={200}
    >
      <div
        className="emotion-4 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-10 emotion-3"
      width={200}
    >
      <div
        className="emotion-8 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-14 emotion-3"
      width={200}
    >
      <div
        className="emotion-12 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-18 emotion-3"
      width={200}
    >
      <div
        className="emotion-16 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-22 emotion-3"
      width={200}
    >
      <div
        className="emotion-20 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-26 emotion-3"
      width={200}
    >
      <div
        className="emotion-24 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-30 emotion-3"
      width={200}
    >
      <div
        className="emotion-28 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-34 emotion-3"
      width={200}
    >
      <div
        className="emotion-32 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-38 emotion-3"
      width={200}
    >
      <div
        className="emotion-36 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-42 emotion-3"
      width={200}
    >
      <div
        className="emotion-40 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-46 emotion-3"
      width={200}
    >
      <div
        className="emotion-44 emotion-1"
        width={200}
      />
    </div>
    <div
      className="emotion-50 emotion-3"
      width={200}
    >
      <div
        className="emotion-48 emotion-1"
        width={200}
      />
    </div>
  </div>
  <div>
    <h2
      className="emotion-52 emotion-53"
    >
      h1. Heading
    </h2>
    <h2
      className="emotion-54 emotion-53"
    >
      h2. Heading
    </h2>
    <h3
      className="emotion-56 emotion-53"
    >
      h3. Heading
    </h3>
    <h4
      className="emotion-58 emotion-53"
    >
      h4. Heading
    </h4>
    <h5
      className="emotion-60 emotion-53"
    >
      h5. Heading
    </h5>
    <h6
      className="emotion-62 emotion-53"
    >
      h6. Heading
    </h6>
    <h6
      className="emotion-64 emotion-53"
    >
      subtitle1. Lorem ipsum...
    </h6>
    <h6
      className="emotion-66 emotion-53"
    >
      subtitle2. Lorem ipsum...
    </h6>
    <p
      className="emotion-68 emotion-53"
    >
      body1. Lorem ipsum...
    </p>
    <p
      className="emotion-70 emotion-53"
    >
      body2. Lorem ipsum...
    </p>
    <span
      className="emotion-72 emotion-53"
    >
      button text
    </span>
    <span
      className="emotion-74 emotion-53"
    >
      caption text
    </span>
    <span
      className="emotion-76 emotion-53"
    >
      overline text
    </span>
  </div>
</div>
`;
